--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=stashly.db"
+    "DefaultConnection": "Data source=stashly.db",
+    "IdentityConnection": "Data source=identity.db"
   },
   "ApiUrl": "https://localhost:5001/"
 }
