add Token info into appsettings

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -10,5 +10,9 @@
     "DefaultConnection": "Data source=stashly.db",
     "IdentityConnection": "Data source=identity.db"
   },
+  "Token":{
+    "Key": "super secret key",
+    "Issuer": "https://localhost:5001"
+  },
   "ApiUrl": "https://localhost:5001/"
 }
